--- a/angular-art-portfolio/src/index.html
+++ b/angular-art-portfolio/src/index.html
@@ -14,6 +14,8 @@
 <body class="mat-typography">
     <app-root></app-root>
 </body>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
 <!-- jQuery library -->
@@ -21,5 +23,6 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<!--<a href='https://www.freepik.com/vectors/3d'>3d vector created by kjpargeter - www.freepik.com</a>-->
 
 </html>
